# myosuite-soph

./: .gitignore  MUJOCO_LOG.TXT  basic_command_tuto.ipynb  environment.yml  exploration.ipynb  installation_check.py  osl_imitation_env.py  ppo_benchmark.ipynb  pyproject.toml  recquirement.txt  requirements.txt  results_test_benchmark.ipynb  summary.csv  train_imitation_test.py  train_test_benchmark.py
my_implementation/: __init__.py
my_implementation/analysis/: evaluate.py  plotting.py  render.py  summary.py
my_implementation/envs/: my_run_track_v0.py
my_implementation/training/: trainer.py
my_implementation/utils/: paths.py
myosuite/my_implementation/: __init__.py
myosuite/my_implementation/analysis/: summary.py
myosuite/my_implementation/training/: callbacks.py  checkpoints.py  trainer.py
myosuite/scripts/: inspect_trajectory_reference.py  launch_training.py  mujoco_visualisation.py  old_results_analysis.ipynb  results_analysis.ipynb  smoke_test_imitation.py
osl_ppo_test/: data  policy.optimizer.pth  policy.pth  system_info.txt
scripts/: exploration.ipynb  launch_training.py  mujoco_visualisation.py  results_analysis.ipynb  smoke_test_imitation.py
tutorials/: 1_Get_Started.ipynb  2_Load_policy.ipynb
tutorials/4b_reflex/: baseline_params.txt
